--- a/index.html
+++ b/index.html
@@ -1,36 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="shortcut icon" href="./img/favicon.png" />
 
-    <!-- fontawesome -->
-    <script
-      src="https://kit.fontawesome.com/c37eed92f1.js"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- own stylesheet -->
-    <link rel="stylesheet" href="./css/style.css" />
-
     <!-- google fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap"
       rel="stylesheet"
     />
+    <!-- own stylesheet -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="wrapper">
       <!-- page header -->
       <header class="header">
         <picture class="header__logo">
-          <img
-            src="./img/logo_001.png"
-            class="header__logo-img"
-            alt="user icon"
-          />
+          <img src="./img/logo.png" class="header__logo-img" alt="user icon" />
         </picture>
         <nav class="header__nav">
           <ul class="header__nav-list">
@@ -64,13 +52,13 @@
         <div class="imgs-wrapper">
           <picture>
             <img
-              src="./img/phone_002.png"
+              src="./img/phone_1.png"
               class="imgs-wrapper__img-1"
               alt=""
               srcset=""
             />
             <img
-              src="./img/phone_001.png"
+              src="./img/phone_2.png"
               class="imgs-wrapper__img-2"
               alt=""
               srcset=""
