sass files and layout-fixes

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="shortcut icon" href="./img/favicon.png" />
+    <title>Clear the Air:: Responsive Website</title>
+    <link rel="shortcut icon" href="./img/favicon.jpg" />
 
     <!-- google fonts -->
     <link
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <!-- own stylesheet -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -41,8 +41,8 @@
           <div class="text-wrapper__sub-header">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque odit
             animi in assumenda deleniti eum, praesentium obcaecati magnam minima
-            officiis. Lorem ipsum dolor sit amet.lorem1 Lorem ipsum dolor, sit
-            amet consectetur adipisicing elit. Voluptatibus, optio.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente,
+            ipsam.
           </div>
           <div class="buttons-wrapper">
             <div class="buttons-wrapper__btn-learn">Learn More</div>
