--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <li class="header__nav-item">Sign Up</li>
           </ul>
         </nav>
+
+        <nav class="header__hamburger">
+          hamburger-menu
+        </nav>
       </header>
 
       <!-- content view -->
