--- a/index.html
+++ b/index.html
@@ -30,10 +30,24 @@
             <li class="header__nav-item">Sign Up</li>
           </ul>
         </nav>
-
-        <nav class="header__hamburger">
-          hamburger-menu
-        </nav>
+        <div class="header__hamburger">
+          <input type="checkbox" class="toggler" name="" id="" />
+          <div class="hamburger"><div></div></div>
+          <div class="menu">
+            <div>
+              <div>
+                <ul>
+                  <li><a href="#">Products</a></li>
+                  <li><a href="#">Prices</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Team</a></li>
+                  <li><a href="#">Login</a></li>
+                  <li><a href="#">Sign Up</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </header>
 
       <!-- content view -->
